--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a href="./live-request.html">Live Requests</a>
             </li>
             <li class="md:text-sm text-lg hover:text-orange-500">
-              <a href="./visible-profile.html">Visible Profiles</a>
+              <a href="./visible-profile-all.html">Visible Profiles</a>
             </li>
             <li class="md:text-sm text-lg hover:text-orange-500">
               <a href="">User Group Slack</a>
@@ -184,7 +184,7 @@
             class="flex lg:justify-between lg:flex-row flex-col-reverse lg:-mt-4 mt-16 relative"
           >
             <div
-              class="text-7xl md:text-8xl absolute lg:left-[37%] lg:top-[33%] left-[96%] top-[52%] -z-10 text-[#00000030]"
+              class="text-7xl md:text-8xl absolute xl:left-[37%] lg:left-[41%] lg:top-[30%] xl:top-[33%] left-[96%] top-[52%] -z-10 text-[#00000030]"
               data-aos="fade-right"
               data-aos-duration="500"
             >
@@ -194,7 +194,7 @@
             <div
               data-aos="fade-right"
               data-aos-duration="500"
-              class="shadow-card lg:w-2/5 w-full px-5 md:px-8 pb-8 pt-10 sm:pt-16 rounded-2xl relative bg-white mt-[4rem] mb-[2rem] lg:mb-0 lg:mt-[16rem]"
+              class="shadow-card lg:w-[45%] xl:w-2/5 w-full px-5 md:px-8 pb-8 pt-10 sm:pt-16 rounded-2xl relative bg-white mt-[4rem] mb-[2rem] lg:mb-0 lg:mt-[16rem]"
             >
               <figure
                 class="h-20 sm:h-24 absolute -top-10 left-0 animtaion-infinite"
@@ -244,7 +244,7 @@
             <div
               data-aos="fade-left"
               data-aos-duration="500"
-              class="shadow-card lg:w-3/6 w-full self-start px-5 md:px-8 pb-8 pt-10 sm:pt-16 rounded-2xl relative bg-white"
+              class="shadow-card lg:w-3/6 w-full self-start px-5 md:px-8 pb-8 pt-10 sm:pt-16 rounded-2xl relative bg-white xl:mt-0 lg:mt-8"
             >
               <div
                 class="text-7xl md:text-8xl absolute -left-4 sm:-left-6 -top-10 -z-10 opacity-20"
@@ -639,13 +639,11 @@
                   <div>
                     <button
                       data-aos="zoom-in"
-                      class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 hover:border-[0.375rem] hover:scale-105 transition ease-in-out"
+                      class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 hover:border-[0.375rem] hover:scale-105 transition ease-in-out float-left transform-gpu"
                       id="present-btn"
                     >
                       Present
                     </button>
-                  </div>
-                  <div>
                     <button
                       data-aos="zoom-in"
                       class="bg-[#E13468] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 flex justify-center items-center cursor-pointer hover:border-[0.375rem] hover:border-[#F2C6D0] hover:scale-105 transition ease-in-out"
@@ -661,6 +659,22 @@
                       Cal
                     </button>
                   </div>
+                  <!-- <div>
+                    <button
+                      data-aos="zoom-in"
+                      class="bg-[#E13468] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 flex justify-center items-center cursor-pointer hover:border-[0.375rem] hover:border-[#F2C6D0] hover:scale-105 transition ease-in-out"
+                      id="call-btn"
+                    >
+                      <img
+                        style="height: 13px; width: 12px"
+                        src="./utils/images/vector_14.png"
+                        alt="Vector Curve"
+                        loading="lazy"
+                        class="mr-2 sm:mr-4"
+                      />
+                      Cal
+                    </button>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -890,7 +904,7 @@
       <div class="w-[70rem] max-w-[90%] mx-auto">
         <div
           data-aos="zoom-in-up"
-          data-aos-duration="700"
+          data-aos-duration="500"
           class="flex justify-between gap-6 flex-wrap sm:my-24 my-10"
         >
           <div
