--- a/live-request-field.html
+++ b/live-request-field.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
     <title>IOS - Dashboard</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -102,25 +102,28 @@
                 </a>
               </li>
 
-              <li>
-                <a
-                  href="./live-request.html"
-                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
-                >
-                  <img
-                    src="./utils/images/icon-12.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                  <span class="ml-2 text-xs lg:text-sm font-medium"
-                    >Live Request</span
+              <li class="relative">
+                <a href="live-request.html">
+                  <div
+                    class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
+                  ></div>
+                  <button
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
                   >
+                    <img
+                      src="./utils/images/icon-12.svg"
+                      alt="Icon"
+                      loading="lazy"
+                      class="brightness-0 invert"
+                    />
+                    Live Request
+                  </button>
                 </a>
               </li>
 
               <li>
                 <a
-                  href="./visible-profile.html"
+                  href="./visible-profile-all.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -154,7 +157,7 @@
           </nav>
 
           <div
-            class="circle absolute -z-10 -right-20 -bottom-10 animtaion-infinite"
+            class="circle absolute -z-10 -right-20 -bottom-10 animtaion-infinite hidden md:block"
           >
             <div
               class="circle-1 absolute left-5 bottom-[6.2rem] bg-[#33D9EF] w-5 h-5 rounded-full"
@@ -171,7 +174,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html">
+                <a href="/">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -226,7 +229,7 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Live requests
                 <span class="font-light">></span> ios
               </p>
@@ -234,7 +237,7 @@
                 class="flex flex-col md:flex-row justify-between items-center mt-4 md:mt-0"
               >
                 <p
-                  class="text-clr_black text-base lg:text-xl font-bold mt-2 mb-4 flex-1"
+                  class="text-clr_blue_light text-base lg:text-xl font-bold mt-2 mb-4 flex-1"
                 >
                   Select from Ios
                 </p>
@@ -255,7 +258,7 @@
 
               <div class="border-b-[0.5px] opacity-60 mt-2 mb-6"></div>
 
-              <section class="grid gap-y-3 relative z-50">
+              <section class="grid gap-y-3 relative md:z-50">
                 <div
                   class="flex justify-between flex-wrap items-center bg-white py-4 px-5 rounded-lg"
                 >
@@ -271,20 +274,24 @@
                       </p>
                     </div>
                   </div>
-                  <div>
-                    <p class="text-xs pb-1">
-                      Price Range: <span class="font-light">€ -80/h</span>
-                    </p>
-                    <p class="text-xs">
-                      Price Range: <span class="font-light">$10- /h</span>
-                    </p>
-                  </div>
-                  <a
-                    href="./live-request-field_detials.html"
-                    class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
+                  <div
+                    class="flex justify-between items-center gap-16 pl-6 w-full xl:w-auto mt-3 xl:mt-auto"
                   >
-                    View Details
-                  </a>
+                    <div>
+                      <p class="text-xs pb-1">
+                        Price Range: <span class="font-light">€ -80/h</span>
+                      </p>
+                      <p class="text-xs">
+                        Price Range: <span class="font-light">$10- /h</span>
+                      </p>
+                    </div>
+                    <a
+                      href="./live-request-field_details.html"
+                      class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn"
+                    >
+                      View Details
+                    </a>
+                  </div>
                 </div>
 
                 <div
@@ -311,7 +318,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -342,7 +349,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -373,7 +380,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -404,7 +411,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -435,7 +442,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -466,7 +473,7 @@
                     </p>
                   </div>
                   <a
-                    href="./live-request-field_detials.html"
+                    href="./live-request-field_details.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
