--- a/live-request.html
+++ b/live-request.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
     <title>Live Request</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -103,7 +103,7 @@
               </li>
 
               <li class="relative">
-                <a href="create-post.html">
+                <a href="live-request.html">
                   <div
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
@@ -121,25 +121,9 @@
                 </a>
               </li>
 
-              <!-- <li>
-                <a
-                  href="./live-request.html"
-                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
-                >
-                  <img
-                    src="./utils/images/icon-12.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                  <span class="ml-2 text-xs lg:text-sm font-medium"
-                    >Live Request</span
-                  >
-                </a>
-              </li> -->
-
               <li>
                 <a
-                  href="./visible-profile.html"
+                  href="./visible-profile-all.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -179,7 +163,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html">
+                <a href="/">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -234,14 +218,14 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Live requests
               </p>
               <div
                 class="flex flex-col md:flex-row justify-between items-center mt-4 md:mt-0"
               >
                 <p
-                  class="text-clr_black text-base lg:text-xl font-bold mt-2 mb-4 flex-1"
+                  class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4 flex-1"
                 >
                   Browse posts by tag
                 </p>
@@ -267,10 +251,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">
+                  <p class="text-clr_blue_light text-sm font-semibold">
                     knowledge work
                   </p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -279,10 +263,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">
+                  <p class="text-clr_blue_light text-sm font-semibold">
                     group-held knowledge
                   </p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -291,8 +275,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">value</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">value</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -301,8 +285,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">records</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">
+                    records
+                  </p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -311,8 +297,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">korolev</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">
+                    korolev
+                  </p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -321,8 +309,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">ios</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">ios</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -331,8 +319,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">react</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">react</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -341,10 +329,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">
+                  <p class="text-clr_blue_light text-sm font-semibold">
                     Objective C
                   </p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -353,8 +341,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">html</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">html</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -363,8 +351,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">Scala</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">Scala</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -373,10 +361,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">
+                  <p class="text-clr_blue_light text-sm font-semibold">
                     interaction
                   </p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -385,8 +373,8 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">FP</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">FP</p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
@@ -395,8 +383,10 @@
                   href="./live-request-field.html"
                   class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_black text-sm font-semibold">exchange</p>
-                  <p class="text-clr_black text-xs pt-2">
+                  <p class="text-clr_blue_light text-sm font-semibold">
+                    exchange
+                  </p>
+                  <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
                 </a>
