--- a/account.html
+++ b/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
     <title>Account - PairTime</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="min-h-screen bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="./visible-profile.html"
+                  href="./visible-profile-all.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -164,7 +164,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html">
+                <a href="/">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -229,16 +229,16 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Account
               </p>
               <p
-                class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4"
+                class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4"
               >
                 You don't have a billing address yet
               </p>
               <div class="border-b lg:w-3/5"></div>
-              <p class="text-clr_black text-xs font-semibold mt-4 mb-5">
+              <p class="text-clr_blue_light text-xs font-semibold mt-4 mb-5">
                 You need to add it before you can buy or sell credits
               </p>
               <a href="create-billing.html">
@@ -248,15 +248,17 @@
                   Create Billing Profile
                 </button>
               </a>
-              <p class="text-clr_black text-base lg:text-xl font-semibold mb-4">
+              <p
+                class="text-clr_blue_light text-base lg:text-xl font-semibold mb-4"
+              >
                 You can donate your credit to the scholarship pool.
               </p>
               <div class="border-b-[0.5px] opacity-60 lg:w-3/5"></div>
-              <p class="text-clr_black text-xs font-semibold mt-4 mb-2">
+              <p class="text-clr_blue_light text-xs font-semibold mt-4 mb-2">
                 PairTime will run the program in a transparent way in the near
                 Future.
               </p>
-              <p class="text-clr_black text-xs lg:w-3/5 mb-4 font-light">
+              <p class="text-clr_blue_light text-xs lg:w-3/5 mb-4 font-light">
                 Note that each payout currency requires a separate onboarding
                 and verification process. You can use the same Stripe account
                 for different onboarding processes.
@@ -271,14 +273,9 @@
             </div>
           </div>
 
-          <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <!-- <div
-            class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full animtaion-infinite"
-          ></div> -->
           <div
             class="hidden md:block bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
           ></div>
-          <!-- </div> -->
         </section>
       </div>
     </main>
