--- a/create-billing.html
+++ b/create-billing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
     <title>Create Billing Profile - PairTime</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="./visible-profile.html"
+                  href="./visible-profile-all.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -164,7 +164,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html"">
+                <a href="/">
                   <figure class="w-full md:px-3 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -178,13 +178,23 @@
                 <div class="user flex gap-5 items-center">
                   <a
                     href="./account.html"
-                    class="hover:shadow-btn hidden md:block"
+                    class="hover:shadow-btn hidden md:block relative rounded-full"
                   >
-                    <img
-                      src="./utils/images/icon-17.svg"
-                      alt="Icon"
-                      loading="lazy"
-                    />
+                    <figure class="absolute top-[15%] left-[25%] z-10">
+                      <img
+                        src="./utils/images/icon-account-white.svg"
+                        alt="Icon"
+                        loading="lazy"
+                      />
+                    </figure>
+
+                    <figure>
+                      <img
+                        src="./utils/images/circle-blue.svg"
+                        alt=""
+                        class="h-12 w-12"
+                      />
+                    </figure>
                   </a>
                   <a
                     href="profile.html"
@@ -219,24 +229,25 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Account
                 <span class="font-light">></span> Create Billing Profile
               </p>
               <p
-                class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4"
+                class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4"
               >
                 This information is visible to only you and the platform.
               </p>
               <div class="border-b-[0.5px] opacity-60 lg:w-3/5"></div>
 
               <form class="lg:w-3/5 w-full">
-                <p class="text-clr_black text-xs font-semibold mt-4 mb-5">
+                <p class="text-clr_blue_light text-xs font-semibold mt-4 mb-5">
                   We need this for tax calculation and invoicing.
                 </p>
 
                 <div class="input-group mb-2">
-                  <label class="block text-xs text-clr_black font-semibold mb-2"
+                  <label
+                    class="block text-xs text-clr_blue_light font-semibold mb-2"
                     >Country
                   </label>
                   <div class="md:flex gap-2">
@@ -254,22 +265,23 @@
                         <option value="">Saudi Arabia</option>
                       </select>
                       <span
-                        class="drop-icon absolute right-3 top-[12%] bg-white px-2 pointer-events-none"
+                        class="drop-icon absolute right-[2%] top-[12%] bg-white px-2 pointer-events-none"
                       >
-                        <i class="fas fa-sort-down"></i>
+                        <i class="fas fa-sort-down text-sm"></i>
                       </span>
                     </div>
                   </div>
                 </div>
 
-                <p class="text-clr_black text-xs mb-6 font-light">
+                <p class="text-clr_blue_light text-xs mb-6 font-light">
                   If your country is not among the list, that means Stripe
                   doesn't support it. We are working on supporting more
                   countries.
                 </p>
 
                 <div class="input-group mb-4 md:mb-6">
-                  <label class="block text-xs text-clr_black font-semibold mb-2"
+                  <label
+                    class="block text-xs text-clr_blue_light font-semibold mb-2"
                     >Account Type
                   </label>
 
@@ -281,9 +293,9 @@
                       <option value="">Group</option>
                     </select>
                     <span
-                      class="drop-icon absolute right-3 top-[12%] bg-white px-2 pointer-events-none"
+                      class="drop-icon absolute right-[2%] top-[12%] bg-white px-2 pointer-events-none"
                     >
-                      <i class="fas fa-sort-down"></i>
+                      <i class="fas fa-sort-down text-sm"></i>
                     </span>
                   </div>
                 </div>
@@ -291,7 +303,7 @@
                 <div class="input-group mb-4 md:mb-6 md:flex gap-2">
                   <div class="flex-1 mb-4 md:mb-0">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >First Name
                     </label>
                     <input
@@ -302,7 +314,7 @@
                   </div>
                   <div class="flex-1">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Last Name
                     </label>
                     <input
@@ -316,7 +328,7 @@
                 <div class="input-group mb-4 md:mb-6 md:flex gap-2">
                   <div class="flex-1 mb-4 md:mb-0">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Address Line 1
                     </label>
                     <input
@@ -327,7 +339,7 @@
                   </div>
                   <div class="flex-1">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Address Line 2
                     </label>
                     <input
@@ -341,7 +353,7 @@
                 <div class="input-group mb-4 md:mb-6 md:flex gap-2">
                   <div class="md:w-3/4 mb-4 md:mb-0">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >City
                     </label>
                     <input
@@ -352,7 +364,7 @@
                   </div>
                   <div class="md:w-1/4">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >ZIP code/Postcode
                     </label>
                     <input
@@ -366,7 +378,7 @@
                 <div class="input-group mb-6">
                   <div>
                     <label
-                      class="text-xs text-clr_black font-semibold mb-2 flex justify-between items-center gap-3"
+                      class="text-xs text-clr_blue_light font-semibold mb-2 flex justify-between items-center gap-3"
                       >State/Province/Region
                       <span
                         class="opacity-[0.7] text-[9px] md:text-[11px] font-normal"
@@ -392,14 +404,9 @@
             </div>
           </div>
 
-          <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <!-- <div
-            class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full"
-          ></div> -->
           <div
             class="bg-[#F48C06] w-24 h-24 fixed top-[40%] -right-20 lg:-right-10 rounded-full animtaion-infinite"
           ></div>
-          <!-- </div> -->
         </section>
       </div>
     </main>
