--- a/goto-meeting.html
+++ b/goto-meeting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
     <title>GoTo Meeting - PairTime</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="min-h-screen bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="./visible-profile.html"
+                  href="./visible-profile-all.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -161,7 +161,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html">
+                <a href="/">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -217,11 +217,13 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Dashboard
                 <span class="font-light">></span> Go to meeting details
               </p>
-              <p class="text-clr_black text-base lg:text-xl mt-2 mb-4">Help!</p>
+              <p class="text-clr_blue_light text-base lg:text-xl mt-2 mb-4">
+                Help!
+              </p>
 
               <div>
                 <div class="flex justify-between items-center">
@@ -234,7 +236,7 @@
                   </p>
                 </div>
 
-                <div class="min-h-[70vh] flex justify-between gap-6 mt-4">
+                <div class="h-[70vh] flex justify-between gap-6 mt-4">
                   <div class="w-4/6 bg-white py-6 px-4 rounded-lg">
                     <div
                       class="flex flex-col justify-between items-center h-full"
@@ -304,9 +306,9 @@
                   </div>
 
                   <div class="w-2/6 flex flex-col rounded-lg">
-                    <div class="chat-box flex-1 bg-white rounded-lg px-4 pb-4">
-                      <div class="h-full">
-                        <div class="chat h-[20rem] pr-2 pb-4 overflow-auto">
+                    <div class="chat-box flex-1 bg-white rounded-lg pl-4 pb-4">
+                      <div class="h-full flex flex-col">
+                        <div class="chat h-[20rem] pr-3 pb-4 overflow-auto">
                           <div class="mr-auto max-w-[70%] mt-4">
                             <p
                               class="w-fit leading-5 text-xs bg-clr_bg_chat px-4 py-3 rounded-t-2xl rounded-br-2xl"
@@ -363,7 +365,7 @@
                         </div>
 
                         <div
-                          class="mt-3 flex justify-between items-center text-xs gap-2"
+                          class="mt-3 flex justify-between items-center mr-4 text-xs gap-2"
                         >
                           <input
                             type="text"
