--- a/search-detail.html
+++ b/search-detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dashboard">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,7 +20,7 @@
     <title>Search Detail - PairTime</title>
   </head>
 
-  <body>
+  <body class="dashboard">
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
@@ -38,7 +38,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="./index.html">
+              <a href="/">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -122,19 +122,22 @@
                 </a>
               </li>
 
-              <li>
-                <a
-                  href="./visible-profile.html"
-                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
-                >
-                  <img
-                    src="./utils/images/icon-13.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                  <span class="ml-2 text-xs lg:text-sm font-medium"
-                    >Visible Profiles</span
+              <li class="relative">
+                <a href="visible-profile-all.html" class="bg-green-600">
+                  <div
+                    class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
+                  ></div>
+                  <button
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-4 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
                   >
+                    <img
+                      src="./utils/images/icon-13.svg"
+                      alt="Icon"
+                      loading="lazy"
+                      class="brightness-0 invert"
+                    />
+                    Visible Profiles
+                  </button>
                 </a>
               </li>
 
@@ -168,7 +171,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="./index.html">
+                <a href="/">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -222,17 +225,17 @@
               </div>
             </div>
 
-            <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm">
+            <div class="center pt-5 lg:pt-2 h-full">
+              <p class="text-clr_blue_light text-xs lg:text-sm">
                 PairTime <span class="font-light">></span> Visible Profile
                 <span class="font-light">></span> Search
                 <span class="font-light">></span> Zhenhao Li
                 <span class="font-light">></span> Details
               </p>
 
-              <div class="flex justify-between items-center">
+              <div class="flex justify-between flex-wrap items-center">
                 <p
-                  class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4 flex-1"
+                  class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4 flex-1"
                 >
                   Your pairing request to Zhenhao Li
                 </p>
@@ -248,11 +251,11 @@
                 class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
               ></div>
 
-              <div class="w-full flex justify-between mt-6">
-                <div class="w-[60%]">
+              <div class="w-full flex justify-between gap-6 mt-6">
+                <div class="w-full md:w-[61%]">
                   <div class="mb-4">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Title</label
                     >
                     <input
@@ -263,7 +266,7 @@
                   </div>
                   <div class="mb-4">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Content
                     </label>
                     <textarea
@@ -274,7 +277,7 @@
                   </div>
                   <div class="mb-4">
                     <label
-                      class="block text-xs text-clr_black font-semibold mb-2"
+                      class="block text-xs text-clr_blue_light font-semibold mb-2"
                       >Tags
                     </label>
                     <input
@@ -284,7 +287,7 @@
                     />
                   </div>
                   <p class="text-xs pb-2">
-                    <span class="font-semibold text-clr_black"
+                    <span class="font-semibold text-clr_blue_light"
                       >Recommended Tags:</span
                     >
                     <span class="text-clr_gray_light ml-3"
@@ -293,8 +296,8 @@
                   </p>
                 </div>
 
-                <div class="w-[36%]">
-                  <div class="flex justify-between items-center mb-4">
+                <div class="w-full md:w-[36%]">
+                  <div class="flex justify-between flex-wrap items-center mb-4">
                     <h2 class="text-base font-semibold">Zhenhao Li</h2>
                     <p class="flex gap-1 text-xs font-semibold">
                       Verified user
@@ -354,29 +357,29 @@
               <div class="search-detail pt-6 pb-16">
                 <div class="flex items-center pt-7">
                   <p
-                    class="text-clr_black text-xl font-semibold mt-2 mb-3 flex-1"
+                    class="text-clr_blue_light text-xl font-semibold mt-2 mb-3 flex-1"
                   >
                     Scheduling
                   </p>
-                  <div class="flex gap-2">
-                    <div>
+                  <div class="md:flex w-[36%] gap-2">
+                    <div class="w-[9rem]">
                       <input
                         placeholder="Find Time Zone"
-                        class="placeholder:text-clr_gray_light placeholder:text-xs px-3 py-3 rounded-lg"
+                        class="placeholder:text-clr_gray_light placeholder:text-[11px] px-3 py-3 rounded-lg block w-full"
                       />
                     </div>
-                    <div class="w-[15rem] relative">
+                    <div class="relative flex-1">
                       <select
-                        class="py-4 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none"
+                        class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                       >
                         <option>Asia/Karachi (currently +5:00)</option>
                         <option>Asia/Karachi (currently +5:00)</option>
                         <option>Asia/Karachi (currently +5:00)</option>
                       </select>
                       <span
-                        class="drop-icon absolute right-2 top-[18%] bg-white px-2 pointer-events-none"
+                        class="drop-icon absolute right-[2%] top-[17%] bg-white px-2 pointer-events-none"
                       >
-                        <i class="fas fa-sort-down"></i>
+                        <i class="fas fa-sort-down text-sm"></i>
                       </span>
                     </div>
                   </div>
@@ -386,8 +389,10 @@
                   class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
                 ></div>
 
-                <div class="flex flex-col md:flex-row justify-between pt-8">
-                  <div class="schedular w-full md:w-[60%]">
+                <div
+                  class="flex flex-col md:flex-row justify-between gap-6 pt-8"
+                >
+                  <div class="schedular w-full md:w-[61%]">
                     <div
                       class="schedular-calendar"
                       id="demo-desktop-day-view"
@@ -439,16 +444,16 @@
                         <div class="flex gap-2 mt-3">
                           <div class="w-[5rem] relative">
                             <select
-                              class="py-3 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none border border-[#F7F8FB] shadow-input"
+                              class="py-3 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none border border-[#F7F8FB] shadow-input_two"
                             >
                               <option>Eur</option>
                               <option>USD</option>
                               <option>CAD</option>
                             </select>
                             <span
-                              class="drop-icon absolute right-2 top-[16%] bg-white px-2 pointer-events-none"
+                              class="drop-icon absolute right-[2%] top-[12%] bg-white px-3 pointer-events-none"
                             >
-                              <i class="fas fa-sort-down"></i>
+                              <i class="fas fa-sort-down text-sm"></i>
                             </span>
                           </div>
                           <input
